<resources>
    <string name="app_name">Khotwh</string>

    <string name="khotwh">Khotwh</string>
    <string name="profile">Profile</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="wishlist">WishList</string>
    <string name="my_bag">My Bag</string>
    <string name="search">Search...</string>
    <string name="mens_wear">men\'s wear</string>
    <string name="womens_wear">women\'s wear</string>
    <string name="kids_wear">kids\' wear</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="no_data_found">No data found</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unexpected_error_try_later">Unexpected error, try later</string>
    <string name="connection_error">Connection error</string>
    <string name="no_sub_categories_here">No sub categories here :-(</string>
    <string name="no_products_here">No products here :-(</string>
    <string name="no_products_match">No products match</string>
    <string name="removed_from_wish_list">Removed from wish list</string>
    <string name="added_to_wish_list">Added to wish list</string>
    <string name="no_products_in_your_wish_list">No products in your wish list</string>
    <string name="user_registration">User Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="submit">Submit</string>
    <string name="required">Required</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="please_wait">Please wait...</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="close">Close</string>
    <string name="already_exists_in_your_bag">Already exists in your bag</string>
    <string name="added_to_your_bag">Added to your bag</string>
    <string name="update_profile">Update Profile</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total:</string>
    <string name="favorite">Favorite</string>
    <string name="remove">Remove</string>
    <string name="no_products_in_your_bag">No products in your bag</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="successful_order">Successful order</string>
    <string name="please_register_before_order">Please register before order</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
